@@ -12,7 +12,7 @@ tags:
     
     ???+ example "Example Code"
         ```lua
-        local sprite = PlayerManager.AnyoneHasTrinket(TrinketType.TRINKET_SWALLOWED_PENNY)
+        local hasTrinket = PlayerManager.AnyoneHasTrinket(TrinketType.TRINKET_SWALLOWED_PENNY)
         ```
 
 ## Functions
@@ -40,7 +40,7 @@ ___
 
 ___
 ### FirstCollectibleOwner () {: aria-label='Functions' }
-#### [EntityPlayer](EntityPlayer.md) FirstCollectibleOwner ( [CollectibleType](https://wofsauge.github.io/IsaacDocs/rep/enums/CollectibleType.html) Collectible, boolean LazSharedGlobalTag ) {: .copyable aria-label='Functions' }
+#### [EntityPlayer](EntityPlayer.md) FirstCollectibleOwner ( [CollectibleType](https://wofsauge.github.io/IsaacDocs/rep/enums/CollectibleType.html) Collectible, boolean LazSharedGlobalTag = true ) {: .copyable aria-label='Functions' }
 Returns `nil` if the specified collectible has never been picked up.
 
 ___
@@ -49,7 +49,7 @@ ___
 
 ___
 ### FirstTrinketOwner () {: aria-label='Functions' }
-#### [EntityPlayer](EntityPlayer.md) FirstTrinketOwner ( [TrinketType](https://wofsauge.github.io/IsaacDocs/rep/enums/TrinketType.html) Trinket, [RNG](RNG.md) RNG, boolean LazSharedGlobalTag ) {: .copyable aria-label='Functions' }
+#### [EntityPlayer](EntityPlayer.md) FirstTrinketOwner ( [TrinketType](https://wofsauge.github.io/IsaacDocs/rep/enums/TrinketType.html) Trinket, [RNG](RNG.md) RNG = nil, boolean LazSharedGlobalTag = true ) {: .copyable aria-label='Functions' }
 Returns `nil` if the specified trinket has never been picked up.
 
 ___
