@@ -5,7 +5,7 @@ __thiscall Entity_Player* PlayerManager::SpawnCoPlayer(int unk); //smol baby
 __thiscall Entity_Player* PlayerManager::SpawnCoPlayer2(int unk); //big baby
 
 "558bec83e4f883ec0c538b5d??56578bf98b0d":
-__thiscall Entity_Player* PlayerManager::FirstCollectibleOwner(CollectibleType collectibleID,RNG **rng, bool unk);
+__thiscall Entity_Player* PlayerManager::FirstCollectibleOwner(CollectibleType collectibleID,RNG **rng, bool lazSharedGlobalTag);
 
 "558bec518b41??53":
 __thiscall bool PlayerManager::IsCoopPlay();
@@ -14,7 +14,7 @@ __thiscall bool PlayerManager::IsCoopPlay();
 __thiscall int PlayerManager::GetNumCollectibles(CollectibleType type);
 
 "558bec83ec08a1????????53":
-__thiscall Entity_Player* PlayerManager::FirstTrinketOwner(TrinketType trinketType, RNG **rng, bool unk);
+__thiscall Entity_Player* PlayerManager::FirstTrinketOwner(TrinketType trinketType, RNG **rng, bool lazSharedGlobalTag);
 
 "558bec8b41??8b49??563bc174??8b75??8b10837a??0075??39b2????????74??83c0043bc175??33c0":
 __thiscall Entity_Player* PlayerManager::FirstPlayerByType(unsigned int type);
