@@ -3,6 +3,11 @@ Additions:
 * Weapon :
 	- SetModifiers
 /newline/
+Modified:
+* PlayerManager :
+	- FirstCollectibleOwner(CollectibleType Collectible, boolean LazSharedGlobalTag = true)
+	- FirstTrinketOwner(TrinketType Trinket, RNG RNG = nil, boolean LazSharedGlobalTag = true)
+/newline/
 Fixes:
 * Fixed relative ids being displayed as actual ids on xmldata tables. 
 * Fix GridEntity:ToFire/ToTNT/ToWall functions
